fixed a bug that help text and copyright text could be out of the window if they are too long

--- a/src/lhc-form.css
+++ b/src/lhc-form.css
@@ -334,10 +334,11 @@ div.cdk-overlay-pane {
 }
 /* show newlines in popover*/
 .lhc-popover-help .ant-popover-inner-content,
-.lhc-popver-copyright .ant-popover-inner-content,
+.lhc-popover-copyright .ant-popover-inner-content,
 .lhc-form .lhc-inline-help,
 .lhc-form .lhc-inline-copyright {
   white-space: pre-wrap;
+  width: auto;
 }
 /* div.ant-popover {
   top: 10px;
